Fix Nebula banner, fits image grid on desktop, full viewport width on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -41,16 +41,25 @@ main {
 
 .bannerContainer {
   display: flex;
-  flex-basis: 100%;
+  justify-content: center;
+  border: none;
+  outline: none;
   width: 100%;
   margin: 0 auto;
   margin-top: -1%;
   margin-bottom: 3em;
+  padding-right: 2rem;
   z-index: 0;
 }
 
 .bannerImage {
-  width: 100%;
+  width: 56%;
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.2);
+  pointer-events: none;
+  
+  @media (max-width: 960px) {
+    width: 100%;
+  }
 }
 
 .bannerImage:hover {
